examples/err-doubledecl3.uc
f(){
    var a,b,c;
    return 10;
}

f(){ // error: identifier already declared
    return 4;
}
